implemented altairis.web.security

--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -15,11 +15,10 @@
 		<target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
 				layout="${longdate} ${uppercase:${level}} ${message:shortName=true}  " />
  
-		<target type="Database" name="databaseLog" 
-				 ConnectionStringName="ApplicationConnectionString">
+		<target type="Database" name="databaseLog"  ConnectionStringName="ApplicationConnectionString">
 			<commandText>
-				INSERT INTO [Log] ([Description], [Summary], 				[Level], [Logger] ,[Status], [IpAddress], [Browser], [Server], [Session], [UserName], [Application], [Type], [Tag], [Layout] )
-				VALUES            (@Description,  SUBSTRING(@Summary, 1, 100),  @Level,  @Logger , @Status,  @IpAddress,  @Browser,  @Server,  @Session,  @UserName,  @Application,  @Type,  @Tag,  @Layout)
+				INSERT INTO [Log] (   [Summary],      [Description], [Level], [Logger] ,[Status], [IpAddress], [Browser], [Server], [Session], [UserName], [Application], [Type], [Tag], [Layout] )
+				VALUES  (SUBSTRING(@Summary, 1, 100),  @Description, @Level,  @Logger , @Status,  @IpAddress,  @Browser,  @Server,  @Session,  @UserName,  @Application,  @Type,  @Tag,  @Layout  )
 			</commandText>
 	
 			<parameter name="@Description" layout="${message}"/>
