--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -18,8 +18,7 @@
     <security allowRemoteAccess="yes" />
   </elmah>
   <connectionStrings>
-    <add name="ApplicationConnectionString" providerName="System.Data.SqlClient" connectionString="server=.\SQLExpress;database=Movie;integrated security=true" />
-    <add name="TableAuthDB" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLExpress;Integrated Security=True;User Instance=True;AttachDBFilename=|DataDirectory|TableAuthDB.mdf" />
+    <add name="ApplicationConnectionString" providerName="System.Data.SqlClient" connectionString="server=.\SQLExpress;database=Movie;integrated security=true" /> 
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
@@ -42,24 +41,10 @@
     </authentication>
     <membership defaultProvider="TableMembershipProvider">
       <providers>
-        <clear />
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
-        <add name="TableMembershipProvider" type="Altairis.Web.Security.TableMembershipProvider, Altairis.Web.Security" connectionStringName="TableAuthDB" />
+        <clear /> 
+        <add name="TableMembershipProvider" type="Altairis.Web.Security.TableMembershipProvider, Altairis.Web.Security" connectionStringName="ApplicationConnectionString" />
       </providers>
-    </membership>
-    <profile>
-      <providers>
-        <clear />
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
-      </providers>
-    </profile>
-    <roleManager enabled="false">
-      <providers>
-        <clear />
-        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
-        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
-      </providers>
-    </roleManager>
+    </membership> 
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -83,7 +68,7 @@
     <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" />
     <roleManager enabled="true" defaultProvider="TableRoleProvider">
       <providers>
-        <add name="TableRoleProvider" type="Altairis.Web.Security.TableRoleProvider, Altairis.Web.Security" connectionStringName="TableAuthDB" />
+        <add name="TableRoleProvider" type="Altairis.Web.Security.TableRoleProvider, Altairis.Web.Security" connectionStringName="ApplicationConnectionString" />
       </providers>
     </roleManager>
   </system.web>
