--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -110,6 +110,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App\Attributes\AuthorizeByRoleAttribute.cs" />
     <Compile Include="App_Start\NinjectMVC3.cs" />
     <Compile Include="App\Areas\AdminAreaRegistration.cs" />
     <Compile Include="App\Areas\Controllers\ConfigsController.cs" />
@@ -278,6 +279,7 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LogOnPartial.cshtml" />
     <Content Include="Views\Account\Me.cshtml" />
+    <Content Include="Views\Shared\AccessDenied.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
