--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -18,7 +18,7 @@
 		<target type="Database" name="databaseLog"  ConnectionStringName="ApplicationConnectionString">
 			<commandText>
 				INSERT INTO [Log] (   [Summary],      [Description], [Level], [Logger] ,[Status], [IpAddress], [Browser], [Server], [Session], [UserName], [Application], [Type], [Tag], [Layout] )
-				VALUES  (SUBSTRING(@Summary, 1, 100),  @Description, @Level,  @Logger , @Status,  @IpAddress,  @Browser,  @Server,  @Session,  @UserName,  @Application,  @Type,  @Tag,  @Layout  )
+				VALUES  (SUBSTRING(@Summary, 1, 100),  @Description, @Level,  @Logger , @Status,  @IpAddress,  SUBSTRING(@Browser, 1, 100),  @Server,  @Session,  @UserName,  @Application,  @Type,  @Tag,  @Layout  )
 			</commandText>
 	
 			<parameter name="@Description" layout="${message}"/>
@@ -27,14 +27,14 @@
 			<parameter name="@Logger" layout=" "/>
 			<parameter name="@Status" layout=" "/>
 			<parameter name="@IpAddress" layout="${aspnet-request:serverVariable=remote_addr}"/>
-			<parameter name="@Browser" layout="${aspnet-request:serverVariable=remote_addrHTTP_USER_AGENT}"/>
+			<parameter name="@Browser" layout="${aspnet-request:serverVariable=HTTP_USER_AGENT}"/>
 			<parameter name="@Server" layout="${aspnet-request:serverVariable=SERVER_NAME}"/>
 			<parameter name="@Session" layout="${aspnet-sessionid}"/>
 			<parameter name="@UserName" layout="${level}"/>
 			<parameter name="@Application" layout="${level}"/>
 			<parameter name="@Type" layout="${level}"/>
 			<parameter name="@Tag" layout="${level}"/>
-			<parameter name="@Layout" layout="HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
+			<parameter name="@Layout" layout="local_addr:${aspnet-request:serverVariable=local_addr}|HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
 
 		</target>
 
