added username to log

--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -30,11 +30,11 @@
 			<parameter name="@Browser" layout="${aspnet-request:serverVariable=HTTP_USER_AGENT}"/>
 			<parameter name="@Server" layout="${aspnet-request:serverVariable=SERVER_NAME}"/>
 			<parameter name="@Session" layout="${aspnet-sessionid}"/>
-			<parameter name="@UserName" layout="${level}"/>
+			<parameter name="@UserName" layout="${aspnet-user-identity}"/>
 			<parameter name="@Application" layout="${level}"/>
 			<parameter name="@Type" layout="${level}"/>
 			<parameter name="@Tag" layout="${level}"/>
-			<parameter name="@Layout" layout="local_addr:${aspnet-request:serverVariable=local_addr}|HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
+			<parameter name="@Layout" layout="email:${aspnet-session:variable=email}|username:${aspnet-session:variable=username}|local_addr:${aspnet-request:serverVariable=local_addr}|HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception:${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
 
 		</target>
 
