--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -14,9 +14,20 @@
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <section name="glimpse" type="Glimpse.Core.Configuration.GlimpseConfiguration" />
   </configSections>
+  <!--add ELMAH--> 
   <elmah>
     <security allowRemoteAccess="yes" />
   </elmah>
+
+	<location path="elmah.axd">
+		<system.web>
+			<authorization>
+				<allow roles="Dev" />
+				<deny users="*" />
+			</authorization>
+		</system.web>
+	</location>
+	
   <connectionStrings>
     <add name="ApplicationConnectionString" providerName="System.Data.SqlClient" connectionString="server=.\SQLExpress;database=Movie;integrated security=true" /> 
   </connectionStrings>
