--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -33,7 +33,7 @@
 			<parameter name="@UserName" layout="${aspnet-user-identity}"/>
 			<parameter name="@Application" layout="${level}"/>
 			<parameter name="@Type" layout="${level}"/>
-			<parameter name="@Tag" layout="${level}"/>
+			<parameter name="@Tag" layout="email:${aspnet-session:variable=email}"/>
 			<parameter name="@Layout" layout="email:${aspnet-session:variable=email}|username:${aspnet-session:variable=username}|local_addr:${aspnet-request:serverVariable=local_addr}|HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception:${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
 
 		</target>
