--- a/Source/Web/packages.config
+++ b/Source/Web/packages.config
@@ -5,6 +5,8 @@
   <package id="elmah.corelibrary" version="1.2.1" />
   <package id="Elmah.MVC" version="1.2" />
   <package id="EntityFramework" version="4.1.10331.0" />
+  <package id="FluentValidation" version="3.2.0.0" />
+  <package id="FluentValidation.MVC3" version="3.2.0.0" />
   <package id="Glimpse" version="0.86" />
   <package id="Glimpse.Mvc3" version="0.86" />
   <package id="jQuery" version="1.5.1" />
