use sproc for logging  adding forgot

--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -16,11 +16,23 @@
 				layout="${longdate} ${uppercase:${level}} ${message:shortName=true}  " />
  
 		<target type="Database" name="databaseLog"  ConnectionStringName="ApplicationConnectionString">
-			<commandText>
-				INSERT INTO [Log] (   [Summary],      [Description], [Level], [Logger] ,[Status], [IpAddress], [Browser], [Server], [Session], [UserName], [Application], [Type], [Email], [Layout] )
-				VALUES  (SUBSTRING(@Summary, 1, 100),  @Description, @Level,  @Logger , @Status,  @IpAddress,  SUBSTRING(@Browser, 1, 100),  @Server,  @Session,  @UserName,  @Application,  @Type,  @Email,  @Layout  )
-			</commandText>
-	
+			<commandText> 
+				InsertLog  ( 
+					@Description, 
+					SUBSTRING(@Description, 1, 100),  
+					@Level,  
+					@Logger , 
+					@Status,  
+					@IpAddress,  
+					SUBSTRING(@Browser, 1, 100),  
+					@Server,  
+					@Session,  
+					@UserName,  
+					@Application,  
+					SUBSTRING(@Type, 1, 100),  
+					@Email,  
+					@Layout  ) 
+			</commandText> 
 			<parameter name="@Description" layout="${message}"/>
 			<parameter name="@Summary" layout="${message}"/>
 			<parameter name="@Level" layout="${level}"/>
@@ -32,7 +44,7 @@
 			<parameter name="@Session" layout="${aspnet-sessionid}"/>
 			<parameter name="@UserName" layout="${aspnet-user-identity}"/>
 			<parameter name="@Application" layout="${level}"/>
-			<parameter name="@Type" layout="${level}"/>
+			<parameter name="@Type" layout="${callsite}"/>
 			<parameter name="@Email" layout="${aspnet-session:variable=email}"/>
 			<parameter name="@Layout" layout="email:${aspnet-session:variable=email}|username:${aspnet-session:variable=username}|local_addr:${aspnet-request:serverVariable=local_addr}|HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception:${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
 
