--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -289,6 +289,8 @@
     <Content Include="Views\Account\Me.cshtml" />
     <Content Include="Views\Shared\AccessDenied.cshtml" />
     <Content Include="Views\HelloWorld\Index2.cshtml" />
+    <Content Include="Views\Account\Forgot.cshtml" />
+    <Content Include="Views\Account\ForgotSuccess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
