--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -15,38 +15,40 @@
 		<target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
 				layout="${longdate} ${uppercase:${level}} ${message:shortName=true}  " />
  
-		<target type="Database" name="databaseLog"  ConnectionStringName="ApplicationConnectionString">
-			<commandText> 
-				InsertLog  ( 
-					@Description, 
-					SUBSTRING(@Description, 1, 100),  
-					@Level,  
-					@Logger , 
-					@Status,  
-					@IpAddress,  
-					SUBSTRING(@Browser, 1, 100),  
-					@Server,  
-					@Session,  
-					@UserName,  
-					@Application,  
-					SUBSTRING(@Type, 1, 100),  
-					@Email,  
-					@Layout  ) 
-			</commandText> 
-			<parameter name="@Description" layout="${message}"/>
-			<parameter name="@Summary" layout="${message}"/>
-			<parameter name="@Level" layout="${level}"/>
-			<parameter name="@Logger" layout=" "/>
-			<parameter name="@Status" layout=" "/>
-			<parameter name="@IpAddress" layout="${aspnet-request:serverVariable=HTTP_X_FORWARDED_FOR}"/>
-			<parameter name="@Browser" layout="${aspnet-request:serverVariable=HTTP_USER_AGENT}"/>
-			<parameter name="@Server" layout="${aspnet-request:serverVariable=SERVER_NAME}"/>
-			<parameter name="@Session" layout="${aspnet-sessionid}"/>
-			<parameter name="@UserName" layout="${aspnet-user-identity}"/>
-			<parameter name="@Application" layout="${level}"/>
-			<parameter name="@Type" layout="${callsite}"/>
-			<parameter name="@Email" layout="${aspnet-session:variable=email}"/>
-			<parameter name="@Layout" layout="email:${aspnet-session:variable=email}|username:${aspnet-session:variable=username}|local_addr:${aspnet-request:serverVariable=local_addr}|HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception:${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
+		<target type="Database" name="databaseLog"  ConnectionStringName="ApplicationConnectionString"> 
+				<commandText>
+					DECLARE @summary nvarchar(100)
+					set @summary = SUBSTRING(@Description, 1, 100)
+					EXECUTE InsertLog
+					@Description,
+					@summary,
+					@Level,
+					@Logger ,
+					@Status,
+					@IpAddress,
+					@Level,
+					@Server,
+					@Session,
+					@UserName,
+					@Application,
+					@Level,
+					@Email,
+					@Layout
+				</commandText>
+				<parameter name="@Description" layout="${message}"/> 
+				<parameter name="@Level" layout="${level}"/>
+				<parameter name="@Logger" layout=" "/>
+				<parameter name="@Status" layout=" "/>
+				<parameter name="@IpAddress" layout="${aspnet-request:serverVariable=HTTP_X_FORWARDED_FOR}"/>
+				<parameter name="@Browser" layout="${aspnet-request:serverVariable=HTTP_USER_AGENT}"/>
+				<parameter name="@Server" layout="${aspnet-request:serverVariable=SERVER_NAME}"/>
+				<parameter name="@Session" layout="${aspnet-sessionid}"/>
+				<parameter name="@UserName" layout="${aspnet-user-identity}"/>
+				<parameter name="@Application" layout="${level}"/>
+				<parameter name="@Type" layout="${callsite}"/>
+				<parameter name="@Email" layout="${aspnet-session:variable=email}"/>
+				<parameter name="@Layout" layout="email:${aspnet-session:variable=email}|username:${aspnet-session:variable=username}|local_addr:${aspnet-request:serverVariable=local_addr}|HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception:${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
+ 
 
 		</target>
 
