got logger working

--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -18,7 +18,11 @@
 		<target type="Database" name="databaseLog"  ConnectionStringName="ApplicationConnectionString"> 
 				<commandText>
 					DECLARE @summary nvarchar(100)
+					DECLARE @browserParam nvarchar(100)
+					DECLARE @typeParam nvarchar(100)
 					set @summary = SUBSTRING(@Description, 1, 100)
+					set @browserParam = SUBSTRING(@Browser, 1, 100)
+					set @typeParam = SUBSTRING(@Type, 1, 100)
 					EXECUTE InsertLog
 					@Description,
 					@summary,
@@ -26,12 +30,12 @@
 					@Logger ,
 					@Status,
 					@IpAddress,
-					@Level,
+					@browserParam,
 					@Server,
 					@Session,
 					@UserName,
 					@Application,
-					@Level,
+					@typeParam,
 					@Email,
 					@Layout
 				</commandText>
