--- a/Source/Web/packages.config
+++ b/Source/Web/packages.config
@@ -15,6 +15,7 @@
   <package id="jQuery.vsdoc" version="1.5.1" />
   <package id="le_nlog" version="1.5" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
+  <package id="microsoft-web-helpers" version="1.15" />
   <package id="Modernizr" version="1.7" />
   <package id="Ninject" version="2.2.1.4" />
   <package id="Ninject.MVC3" version="2.2.2.0" />
