--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -170,51 +170,51 @@
     <Content Include="Areas\Admin\Views\Users\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Index.cshtml" />
-    <Content Include="Content\2011.3.1129\Black\editor.png" />
-    <Content Include="Content\2011.3.1129\Black\imagebrowser.png" />
-    <Content Include="Content\2011.3.1129\Black\loading-image.gif" />
-    <Content Include="Content\2011.3.1129\Black\loading.gif" />
-    <Content Include="Content\2011.3.1129\Black\slider-h.gif" />
-    <Content Include="Content\2011.3.1129\Black\slider-v.gif" />
-    <Content Include="Content\2011.3.1129\Black\sprite.png" />
-    <Content Include="Content\2011.3.1129\BlueOpal\editor.png" />
-    <Content Include="Content\2011.3.1129\BlueOpal\imagebrowser.png" />
-    <Content Include="Content\2011.3.1129\BlueOpal\loading-image.gif" />
-    <Content Include="Content\2011.3.1129\BlueOpal\loading.gif" />
-    <Content Include="Content\2011.3.1129\BlueOpal\slider-h.gif" />
-    <Content Include="Content\2011.3.1129\BlueOpal\slider-v.gif" />
-    <Content Include="Content\2011.3.1129\BlueOpal\sprite.png" />
-    <Content Include="Content\2011.3.1129\Default\editor.png" />
-    <Content Include="Content\2011.3.1129\Default\imagebrowser.png" />
-    <Content Include="Content\2011.3.1129\Default\loading-image.gif" />
-    <Content Include="Content\2011.3.1129\Default\loading.gif" />
-    <Content Include="Content\2011.3.1129\Default\slider-h.gif" />
-    <Content Include="Content\2011.3.1129\Default\slider-v.gif" />
-    <Content Include="Content\2011.3.1129\Default\sprite.png" />
-    <Content Include="Content\2011.3.1129\kendo.black.min.css" />
-    <Content Include="Content\2011.3.1129\kendo.blueopal.min.css" />
-    <Content Include="Content\2011.3.1129\kendo.common.min.css" />
-    <Content Include="Content\2011.3.1129\kendo.default.min.css" />
-    <Content Include="Content\2011.3.1129\kendo.hakama.min.css" />
-    <Content Include="Content\2011.3.1129\kendo.kendo.min.css" />
-    <Content Include="Content\2011.3.1129\kendo.metro.min.css" />
-    <Content Include="Content\2011.3.1129\kendo.silver.min.css" />
-    <Content Include="Content\2011.3.1129\Metro\editor.png" />
-    <Content Include="Content\2011.3.1129\Metro\imagebrowser.png" />
-    <Content Include="Content\2011.3.1129\Metro\loading-image.gif" />
-    <Content Include="Content\2011.3.1129\Metro\loading.gif" />
-    <Content Include="Content\2011.3.1129\Metro\slider-h.gif" />
-    <Content Include="Content\2011.3.1129\Metro\slider-v.gif" />
-    <Content Include="Content\2011.3.1129\Metro\sprite.png" />
-    <Content Include="Content\2011.3.1129\Silver\editor.png" />
-    <Content Include="Content\2011.3.1129\Silver\imagebrowser.png" />
-    <Content Include="Content\2011.3.1129\Silver\loading-image.gif" />
-    <Content Include="Content\2011.3.1129\Silver\loading.gif" />
-    <Content Include="Content\2011.3.1129\Silver\slider-h.gif" />
-    <Content Include="Content\2011.3.1129\Silver\slider-v.gif" />
-    <Content Include="Content\2011.3.1129\Silver\sprite.png" />
-    <Content Include="Content\2011.3.1129\textures\glass.png" />
-    <Content Include="Content\2011.3.1129\textures\highlight.png" />
+    <Content Include="Content\kendo\Black\editor.png" />
+    <Content Include="Content\kendo\Black\imagebrowser.png" />
+    <Content Include="Content\kendo\Black\loading-image.gif" />
+    <Content Include="Content\kendo\Black\loading.gif" />
+    <Content Include="Content\kendo\Black\slider-h.gif" />
+    <Content Include="Content\kendo\Black\slider-v.gif" />
+    <Content Include="Content\kendo\Black\sprite.png" />
+    <Content Include="Content\kendo\BlueOpal\editor.png" />
+    <Content Include="Content\kendo\BlueOpal\imagebrowser.png" />
+    <Content Include="Content\kendo\BlueOpal\loading-image.gif" />
+    <Content Include="Content\kendo\BlueOpal\loading.gif" />
+    <Content Include="Content\kendo\BlueOpal\slider-h.gif" />
+    <Content Include="Content\kendo\BlueOpal\slider-v.gif" />
+    <Content Include="Content\kendo\BlueOpal\sprite.png" />
+    <Content Include="Content\kendo\Default\editor.png" />
+    <Content Include="Content\kendo\Default\imagebrowser.png" />
+    <Content Include="Content\kendo\Default\loading-image.gif" />
+    <Content Include="Content\kendo\Default\loading.gif" />
+    <Content Include="Content\kendo\Default\slider-h.gif" />
+    <Content Include="Content\kendo\Default\slider-v.gif" />
+    <Content Include="Content\kendo\Default\sprite.png" />
+    <Content Include="Content\kendo\kendo.black.min.css" />
+    <Content Include="Content\kendo\kendo.blueopal.min.css" />
+    <Content Include="Content\kendo\kendo.common.min.css" />
+    <Content Include="Content\kendo\kendo.default.min.css" />
+    <Content Include="Content\kendo\kendo.hakama.min.css" />
+    <Content Include="Content\kendo\kendo.kendo.min.css" />
+    <Content Include="Content\kendo\kendo.metro.min.css" />
+    <Content Include="Content\kendo\kendo.silver.min.css" />
+    <Content Include="Content\kendo\Metro\editor.png" />
+    <Content Include="Content\kendo\Metro\imagebrowser.png" />
+    <Content Include="Content\kendo\Metro\loading-image.gif" />
+    <Content Include="Content\kendo\Metro\loading.gif" />
+    <Content Include="Content\kendo\Metro\slider-h.gif" />
+    <Content Include="Content\kendo\Metro\slider-v.gif" />
+    <Content Include="Content\kendo\Metro\sprite.png" />
+    <Content Include="Content\kendo\Silver\editor.png" />
+    <Content Include="Content\kendo\Silver\imagebrowser.png" />
+    <Content Include="Content\kendo\Silver\loading-image.gif" />
+    <Content Include="Content\kendo\Silver\loading.gif" />
+    <Content Include="Content\kendo\Silver\slider-h.gif" />
+    <Content Include="Content\kendo\Silver\slider-v.gif" />
+    <Content Include="Content\kendo\Silver\sprite.png" />
+    <Content Include="Content\kendo\textures\glass.png" />
+    <Content Include="Content\kendo\textures\highlight.png" />
     <Content Include="Dynamic Expressions.html" />
     <Content Include="favicon.ico" />
     <Content Include="Public\javascripts\backbone-min.js" />
@@ -251,44 +251,44 @@
     <Content Include="Public\javascripts\jquery.validate.min.js" />
     <Content Include="Public\javascripts\modernizr-1.7.min.js" />
     <Content Include="Release Notes - Microsoft.Web.Helpers.txt" />
-    <Content Include="Scripts\2011.3.1129\kendo.all.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.autocomplete.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.binder.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.calendar.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.chart.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.combobox.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.core.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.data.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.data.odata.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.data.xml.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.dataviz.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.datepicker.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.draganddrop.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.dropdownlist.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.editable.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.filtermenu.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.fx.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.grid.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.groupable.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.list.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.menu.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.model.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.numerictextbox.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.pager.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.panelbar.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.popup.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.resizable.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.selectable.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.slider.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.sortable.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.splitter.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.tabstrip.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.timepicker.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.treeview.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.upload.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.validator.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.web.min.js" />
-    <Content Include="Scripts\2011.3.1129\kendo.window.min.js" />
+    <Content Include="Scripts\kendo\kendo.all.min.js" />
+    <Content Include="Scripts\kendo\kendo.autocomplete.min.js" />
+    <Content Include="Scripts\kendo\kendo.binder.min.js" />
+    <Content Include="Scripts\kendo\kendo.calendar.min.js" />
+    <Content Include="Scripts\kendo\kendo.chart.min.js" />
+    <Content Include="Scripts\kendo\kendo.combobox.min.js" />
+    <Content Include="Scripts\kendo\kendo.core.min.js" />
+    <Content Include="Scripts\kendo\kendo.data.min.js" />
+    <Content Include="Scripts\kendo\kendo.data.odata.min.js" />
+    <Content Include="Scripts\kendo\kendo.data.xml.min.js" />
+    <Content Include="Scripts\kendo\kendo.dataviz.min.js" />
+    <Content Include="Scripts\kendo\kendo.datepicker.min.js" />
+    <Content Include="Scripts\kendo\kendo.draganddrop.min.js" />
+    <Content Include="Scripts\kendo\kendo.dropdownlist.min.js" />
+    <Content Include="Scripts\kendo\kendo.editable.min.js" />
+    <Content Include="Scripts\kendo\kendo.filtermenu.min.js" />
+    <Content Include="Scripts\kendo\kendo.fx.min.js" />
+    <Content Include="Scripts\kendo\kendo.grid.min.js" />
+    <Content Include="Scripts\kendo\kendo.groupable.min.js" />
+    <Content Include="Scripts\kendo\kendo.list.min.js" />
+    <Content Include="Scripts\kendo\kendo.menu.min.js" />
+    <Content Include="Scripts\kendo\kendo.model.min.js" />
+    <Content Include="Scripts\kendo\kendo.numerictextbox.min.js" />
+    <Content Include="Scripts\kendo\kendo.pager.min.js" />
+    <Content Include="Scripts\kendo\kendo.panelbar.min.js" />
+    <Content Include="Scripts\kendo\kendo.popup.min.js" />
+    <Content Include="Scripts\kendo\kendo.resizable.min.js" />
+    <Content Include="Scripts\kendo\kendo.selectable.min.js" />
+    <Content Include="Scripts\kendo\kendo.slider.min.js" />
+    <Content Include="Scripts\kendo\kendo.sortable.min.js" />
+    <Content Include="Scripts\kendo\kendo.splitter.min.js" />
+    <Content Include="Scripts\kendo\kendo.tabstrip.min.js" />
+    <Content Include="Scripts\kendo\kendo.timepicker.min.js" />
+    <Content Include="Scripts\kendo\kendo.treeview.min.js" />
+    <Content Include="Scripts\kendo\kendo.upload.min.js" />
+    <Content Include="Scripts\kendo\kendo.validator.min.js" />
+    <Content Include="Scripts\kendo\kendo.web.min.js" />
+    <Content Include="Scripts\kendo\kendo.window.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
