got test working with ExpandoObject

--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -137,4 +137,27 @@
       <add url="{regex}" />
     </urlBlacklist>
   </glimpse>
+  <system.serviceModel>
+    <services>
+      <service name="MvcMovie.App.Services.MovieService">
+        <endpoint address="" behaviorConfiguration="MvcMovie.App.Services.MovieServiceAspNetAjaxBehavior"
+          binding="webHttpBinding" contract="MvcMovie.App.Services.MovieService" />
+      </service>
+    </services>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="MvcMovie.App.Services.MovieServiceAspNetAjaxBehavior">
+          <enableWebScript />
+        </behavior>
+      </endpointBehaviors>
+      <serviceBehaviors>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+      multipleSiteBindingsEnabled="true" />
+  </system.serviceModel>
 </configuration>
