--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -101,6 +101,9 @@
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -128,6 +131,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App\Attributes\AuthorizeByRoleAttribute.cs" />
+    <Compile Include="App\Services\Movie.cs" />
+    <Compile Include="App\Services\MovieService.svc.cs">
+      <DependentUpon>MovieService.svc</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\NinjectMVC3.cs" />
     <Compile Include="App\Areas\AdminAreaRegistration.cs" />
     <Compile Include="App\Areas\Controllers\ConfigsController.cs" />
@@ -165,6 +172,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App\Services\MovieService.svc" />
     <Content Include="Areas\Admin\Views\Users\About.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Create.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Details.cshtml" />
