--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -131,26 +131,35 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App\Attributes\AuthorizeByRoleAttribute.cs" />
+    <Compile Include="App\Attributes\RestHttpVerbFilter.cs" />
     <Compile Include="App_Start\NinjectMVC3.cs" />
-    <Compile Include="App\Areas\Admin\AdminAreaRegistration.cs" />
-    <Compile Include="App\Areas\Admin\Controllers\ConfigsController.cs" />
-    <Compile Include="App\Areas\Admin\Controllers\ElmahController.cs" />
-    <Compile Include="App\Areas\Admin\Controllers\LogsController.cs" />
-    <Compile Include="App\Areas\Admin\Controllers\RoleMembershipsController.cs" />
-    <Compile Include="App\Areas\Admin\Controllers\RolesController.cs" />
-    <Compile Include="App\Areas\Admin\Controllers\UsersController.cs" />
-    <Compile Include="App\Areas\Admin\Models\Log.cs" />
-    <Compile Include="App\Controllers\AccountController.cs" />
-    <Compile Include="App\Controllers\ApplicationController.cs" />
+    <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\ConfigsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ElmahController.cs" />
+    <Compile Include="Areas\Admin\Controllers\LogsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\RoleMembershipsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\RolesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
+    <Compile Include="Areas\Admin\Models\Log.cs" />
+    <Compile Include="Areas\Api\ApiAreaRegistration.cs" />
+    <Compile Include="Areas\Api\Controllers\CommentsController.cs" />
+    <Compile Include="Areas\Api\Controllers\TestController.cs" />
+    <Compile Include="Areas\Api\Models\Comment.cs" />
+    <Compile Include="Areas\Api\Models\CommentManager.cs" />
+    <Compile Include="Areas\Api\Models\ICommentManager.cs" />
+    <Compile Include="Areas\Ranch\Controllers\TestController.cs" />
+    <Compile Include="Areas\Ranch\RanchAreaRegistration.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="App\Infastructure\CacheHelper.cs" />
     <Compile Include="App\Infastructure\ExpandoObjectConverter.cs" />
     <Compile Include="App\Infastructure\FlashHelpers.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="App\Infastructure\FormsAuthTokenStore.cs" />
-    <Compile Include="App\Controllers\HelloWorldController.cs" />
-    <Compile Include="App\Controllers\HomeController.cs" />
-    <Compile Include="App\Controllers\MoviesController.cs" />
+    <Compile Include="Controllers\HelloWorldController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -158,7 +167,7 @@
     <Compile Include="App\Infastructure\Logging\ILogger.cs" />
     <Compile Include="App\Infastructure\Logging\NLogger.cs" />
     <Compile Include="App\Infastructure\Massive.cs" />
-    <Compile Include="App\Areas\Admin\Models\Config.cs" />
+    <Compile Include="Areas\Admin\Models\Config.cs" />
     <Compile Include="App\Models\AccountModel.cs" />
     <Compile Include="App\Models\Movies.cs" />
     <Compile Include="App\Models\PaymentModel.cs" />
@@ -312,6 +321,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Api\Views\Shared\" />
+    <Folder Include="Areas\Ranch\Models\" />
+    <Folder Include="Areas\Ranch\Views\Shared\" />
     <Folder Include="Public\images\" />
   </ItemGroup>
   <ItemGroup>
@@ -366,6 +378,10 @@
     <Content Include="Areas\Admin\Views\Roles\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Roles\Create.cshtml" />
     <Content Include="App_Code\List.cshtml" />
+    <Content Include="Areas\Api\Views\Web.config" />
+    <Content Include="Areas\Api\Views\Test\Index.cshtml" />
+    <Content Include="Areas\Ranch\Views\Web.config" />
+    <Content Include="Areas\Ranch\Views\Test\Index.cshtml" />
     <None Include="CodeTemplates\AddController\Controller.tt" />
     <None Include="CodeTemplates\AddView\CSHTML\Create.tt" />
     <None Include="CodeTemplates\AddView\CSHTML\Edit.tt" />
