--- a/Source/Web/packages.config
+++ b/Source/Web/packages.config
@@ -17,6 +17,7 @@
   <package id="KendoGridBinder" version="1.3" />
   <package id="KendoUIWeb" version="2011.3.1129" />
   <package id="le_nlog" version="1.5" />
+  <package id="mbunit" version="3.3.454.0" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="microsoft-web-helpers" version="1.15" />
   <package id="Modernizr" version="1.7" />
