--- a/Source/AcceptanceTests/AcceptanceTests.csproj
+++ b/Source/AcceptanceTests/AcceptanceTests.csproj
@@ -51,6 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Watir\Web.rb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Watir\ReadMe.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
