--- a/Source/AcceptanceTests/AcceptanceTests.csproj
+++ b/Source/AcceptanceTests/AcceptanceTests.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Watir\test.rb" />
     <None Include="Watir\Web.rb" />
   </ItemGroup>
   <ItemGroup>
