--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -406,6 +406,7 @@
     <None Include="CodeTemplates\AddView\AspxCSharp\Edit.tt" />
     <None Include="CodeTemplates\AddView\AspxCSharp\Empty.tt" />
     <None Include="CodeTemplates\AddView\AspxCSharp\List.tt" />
+    <None Include="CodeTemplates\AddView\CSHTML\Kendo.tt" />
     <None Include="CodeTemplates\AddView\CSHTML\Create.tt" />
     <None Include="CodeTemplates\AddView\CSHTML\Delete.tt" />
     <None Include="CodeTemplates\AddView\CSHTML\Details.tt" />
